<resources>
    <string name="app_name">Gongmo</string>
    <string name="GPS">gps</string>
    <string name="등산">climb</string>
    <string name="picnic">나들이</string>
    <string name="near_restaurant">근처식당</string>
    <string name="climb">등산</string>
    <string name="title_activity_gpsactivity">Map</string>
    <string name="title_activity_maps">Map</string>
    <string name="GPSbtn">GPS</string>
    <string name="Climbbtn">등산</string>
    <string name="Picnicbtn">피크닉</string>
    <string name="Restaurantbtn">식당</string>
    <string name="gpsbutton">GPSbutton</string>
    <string name="banner_flip_to_left">banner flip to left</string>
    <string name="banner_flip_to_right">banner flip to right</string>
    <string name="moutain_1">moutain</string>
    <string name="mountain_2">mountain</string>
    <string name="mountain_3">mountain</string>
    <string name="indicator">indicator</string>
    <string name="clmib_menu_easy_button">clmib menu easy button</string>
    <string name="clmib_menu_normal_button">clmib menu normal button</string>
    <string name="climb_menu_hard_button">climb menu hard button</string>
    <string name="main_activity_view_app_name">main activity view app name</string>
    <string name="main_side_menu_button">main side menu button</string>
    <string name="main_search_button">main search button</string>
    <string name="picnic_with_who">나들이 누구와 함께?</string>
    <string name="with_family">가족과 함께~</string>
    <string name="with_couple">연인과 함께~</string>
    <string name="with_solo">혼자가 편해~</string>
    <string name="wiith_pet">반려동물과 함께~</string>
    <string name="with_pet">with_pet</string>
    <string name="refresh">새로고침</string>
    <string name="with_family_desc">멀지 않은 곳에서 가족과의\n소중한 추억을 만들 수 있는 가족 나들이!</string>
    <string name="with_couple_desc">사랑하는 연인과 도심에서\n벗어난듯한 이색 데이트!</string>
    <string name="with_solo_desc">요즘은 혼자가 대세!\n혼자 즐기는 등산!</string>
    <string name="with_pet_desc">애완동물과 함께하면\n더 즐거운 등산!</string>
    <string name="top_appname">top_appname</string>
    <string name="top_search">top_search</string>
    <string name="top_sidemenu">top_sidemenu</string>
    <string name="mt_dobong_place">위치 : 서울 도봉구 도봉동</string>
    <string name="mt_dobong"> 도봉산을 찾아가는데에는 교통이 편리 한편이며, 도봉산역에서 도봉산 까지 많은 먹을거리를 판다. 그리고 일반적으로 등산 시 숙력자 기준으로 왕복 6시간은 소요 된다고 한다. 초보자라면 보통 7-8시가 소요되는데 이것은 오르면 오를수록 바위를 오르게 되기 때문이다.
    도봉산 등산코스는 주능선 외의 능선을 이용하며 다양한 조합으로 짤 수 있기 때문에 도봉산에 한번 가봤던 사람들도 다른 도봉산 등산코스를 이용하기 위해 다시 방문하기도 한다.
        또한, 9-10월에 환상적인 경치와 단풍이 어울려져 있는 모습을 볼수 있어 많이 찾는다. </string>
    <string name="mt_inwang_place">위치 : 서울 종로구와 서대문구 홍제동 경계</string>
    <string name="mt_inwang">개방 직후에는 하루에도 수만명씩 찾던 인왕산은 지금은 찾는 사람이 많지 않아 주변 동네 주민들의 산책 코스로 제 모습을 찾고 있다. 우리나라의 암벽등반 태동기에 많이 찾던 등반 대상지로서 지금의 치마바위 등은 초보자 훈련장으로 인기를 끌고 있다. 그 등산로는 특히 보행약자인 노약자들도 가볍게 산책 할 수 있다. 밤에도 등산하러 올수 있을 정도여서 산 산책이라고 하기에 무색할 정도이다. 그리고 사람들이 9-10월에 많이 찾는다.</string>
    <string name="mt_surak_place">위치 : 서울 노원구 상계동</string>
    <string name="mt_surak">서쪽에는 도봉산을 마주보며 남쪽에는 불암산이 위치한다. 함께 수락산-불암산 등산코스로 많이 이용한다.(중급) 암벽이 많이 노출되어 있으나 산세는 그리 험하지 않다. 주말이면 도심에서 몰려온 산악인들로 항상 붐비는 산이다. 사기막에서 오르는 길중에서 향로봉을 지나 영락대, 칠성대, 기차바위를 지나는 등산로가 있는데 가파른 암벽능선을 타고 가는 험로이기 때문에 초보자는 위험한 길이다. 봄에는 진달래가, 가을에는 단풍으로 가득차 있는 수락산의 멋진 모습을 볼수 있다. 또한 수락산은 기차바위가 유명한데 그 기차바위를 오를수 있게 밧줄도 안전하게 설치되어있다. 밧줄을 오르거나 내려갈 때 재미를 느낄수 있고 올라가면서 보는 풍경이 정말 아름답다.</string>
    <string name="mt_engbong_place">위치 : 서울시 성동구 응봉동</string>
    <string name="mt_engbong"> 응봉역에서 내려 15분여 걸어가면 산이라고 하기 민망 할정도로 나지막한 얕은 산이고 계단이 무척 잘 만들어져 있어 누구나 쉽게 올라갈수 있는 뒷동산 정도의 난이도이다. 주변의 풍광이 매우 아름다운 곳으로 유명하다. 특히 봄에는 노란 개나리 꽃들이 산 하나 가득 메워져 있는 아름다운 모습이 있어 개나리축제가 열린다. 정상에 도착하면 멋진 한강뷰를 산에서 만끽할 수 있다. </string>
    <string name="mt_youngma_place">위치: 서울 특별시 중랑구 용마산로 62길 53 (면목동)</string>
    <string name="mt_youngma"> 우리공원, 중곡동 간의 산 능선을 따라 이어지는 등산로를 통해 망우리에서 아차산성을 거쳐 어린이 대공원 후문 근처까지 이어진다. 초보자에게도 그리 어렵지 않은 등산코스이다. 산을 등산하면 할수록 서울풍경이 한눈에 보인다. 특히 용마산 전망대에서 서울의 랜드마크인 롯데타워가 제대로 보일 정도로 시야가 넓다. 그래서 인지 시야가 확 트이는 느낌을 받을 수 있다. </string>
    <string name="mt_bulam_place">위치 : 서울 노원구와 경기 남양주시 별내면</string>
    <string name="mt_bulam"> 산을 좋아하지만 높은 산은 너무 무서울 때 추천하는 등산할 만한 산이다. 계단을 지나면서 보는 풍경은 서울과 경기도를 함께 한눈에 바라볼수 있다. 산 자체는 단조로우나 거대한 암벽과 절벽, 울창한 수목이 어울려 아름다운 풍치를 자랑한다. 석장봉과 거북바위가 유명하다. 산 정상부에 있는 큰 바위가 마치 부처님의 모습을 닮았다.</string>
    <string name="mt_namsan_place">위치 : 서울 중구 회현동1가</string>
    <string name="mt_namsan"> 산의 전망대에 다다르면 바로 앞에 북악산도 보인다. 또한 동쪽에 낙산과 인왕산 앞에 북악산 그 뒤에 북한산이 있는데 날씨가 좋으면 북한산의 기이한 봉우리들을 남산에서 구경가능하다. 또한 황톳길이 2018년 9월부터 만들어졌는데 남산에서 즐길수 있는 또다른 힐링 포인트이다. 4월달에는 벚꽃이 활짝 피어 벚꽃나무와 사진찍는 명소가 된다. 특히, 사람이 많이 붐비지 않아 즐겁게 누릴수 있다. 또 가을에는 단풍이 가득한 계절마다 다른 남산의 매력을 볼수 있다.</string>
    <string name="mt_gaeun_place">위치 : 서울특별시 성북구 종암동</string>
    <string name="mt_gaeun">대도시에서 “녹색허파”로서의 역할과 수도권 주민들의 자연휴식처로 크게 애용되고 있다. 개운산은 성북구 안암동에 있는 산으로서 안암산, 진석산(陳石山)이라고도 한다. 노선 주변에는 태조 5년(1396) 왕사 무학이 창건한 개운사가 있어 산의 이름이 되었다. 산 중턱 이상까지 도로가 놓여져 접근하기 쉬우며 산을 한 바퀴 빙 둘러볼 수도 있고, 이 코스처럼 중턱 숲길을 따라 걷다 고려대 캠퍼스의 고풍스러운 건물을 감상하는 길로 연결해 볼 수도 있다. 개운산은 정상과 중턱 오솔길 모두 성북구에서 공을 들여 가꾼 흔적이 역력하다. 또 정상 조망대에서는 그리 높지 않은 곳임에도 시원한 도심 전망을 만끽할 수 있다.
개운산은 134m 높이의 오르기에 어려움이 없는 산이다. 특히 개운산에 위치한 개우산근린공원은 서울 시민들이 이용하기 용이한 운동시설과 편의시설이 설치되어 있고 30분정도 소요되는 공원길도 조성되어 있다. </string>
    <string name="mt_dongmangbong_place">위치 : 서울 성북구 보문동3가 218-38</string>
    <string name="mt_dongmangbong">성북구 보문동6가와 종로구 숭인동에 걸쳐 있는 산으로서, 청룡사 동쪽에 솟은 산봉우리이다. 단종왕비 정순왕후 송씨가 거처하며, 단종을 위하여 매일 조석으로 이곳에 올라 와서 동쪽으로 영월을 바라보며, 단종의 명복을 빌었다고 한다. 영조 47년(1771)에 정업원구기비를 세우고, 이 봉우리 바위에 ‘동망봉’ 석자를 친필로 새겼다고 하는데 지금은 전하지 않는다.</string>
    <string name="mt_goeun_place">위치 : 서울 서대문구 홍제동 산41-2</string>
    <string name="mt_goeun">아파트 뒤 동산 느낌의 등산로이다. 고은정이라는 정자가 있는 부근이 정사이라고 생각되며 고은정에서는 인왕산이 보인다. 인왕산이 올려다 보는 것으로 보아 산의 높이는 높지 않은 가볍게 오르기 쉬운 산이다.</string>
    <string name="mt_bongsan_place">위치 :서울 은평구 구산동</string>
    <string name="mt_bongsan">높이는 약 209m이다. 서울특별시 은평구 구산동과 경기도 고양시 경계에 있는 산이다. 산 정상에 봉수대가 있어 봉산이라고 부르게 되었다. \n남북으로 길게 늘어선 능선이며 북쪽에는 효경산이 있고 남쪽에는 증산이 있다. 동쪽 기슭에는 수국사가 있는데 세조가 맏아들 의경세자가 20세의 나이로 갑자기 요절하자 그를 효경산에 묻고 명복을 빌기위해 세운 사찰이다. \n봉산은 근린공원으로 지정되어 봉산공원이 조성되었다. 북한산을 제외하면 은평구에서 가장 큰 산이다. 곳곳에 쉽게 출입할 수 있도록 등산로가 잘 구성되어있다. 낮은 산 높이와 짧은 코스거리에 쉽게 느껴질수 있지만 정상까지 계속 오르막이 이어진다. </string>
    <string name="mt_guryung_place">위치 : 서울특별시 서초구 염곡동</string>
    <string name="mt_guryung">구룡산은 옛날 임신한 여인이 용 열 마리가 승천하는 것을 보고 놀라 소리치는 바람에 한 마리가 떨어져 죽고 아홉 마리만 하늘로 올라갔다 하여 붙여졌다. 코스 대부분이 숲길로 이루어져 햇빛이 비추는 여름에도 시원한 그늘 밑을 걸을 수 있으며 높거나 산길이 험하지 않아 부담 없이 산행을 즐길 수 있다. 다만 구룡산 진입로부터 개암약수터까지는 약간의 오르막이 20분 정도 진행되나 나무계단 등의 편의시설이 있어 노약자도 쉬엄쉬엄 올라가면 진행에 큰 무리는 없다. 높이는 306m의 높거나 험하지 않아 부담없는 산행과 아침운동을 즐길만한 적당한 산이다 서울이 한눈에 보이는 야경이 아름답다.</string>
    <string name="mt_ilja_place">위치 : 서울 강동구 길동</string>
    <string name="mt_ilja">노선의 대부분은 차지하는 일자산은 이름 그대로 능선이 군더더기 없이 일(一)자로 뻗은 산이다. 때문에 중간 중간 갈림길이 많아도 큰 길을 따라 곧장 질러가면 3㎞에 달하는 울창한 숲길을 고스란히 두 발에 담아낼 수 있다. 특히 아름드리나무들이 많아 마치 큰 산에 들어선 듯한 청량감이 일품이다. 강동구가 야심차게 추진하고 있는 강동그린웨이를 중심으로 둔촌동 생태경관보전지역, 허브천문공원 및 길동생태공원 등 강동의 주요 명소를 연결한 코스이다. 야트막한 능선으로 뻗은 일자산 숲길을 따라 자연의 향기를 만끽할 수 있으며, 길동생태공원(사전예약 필수)은 우리나라의 대표적인 생태공원으로 계절별로 다양한 체험 프로그램이 마련되어 있다.
\n※봄이면 꽃향기가 가득한 허브천문공원, 그리고 동·식물의 모습을 관찰 할 수 있는 길동생태공원 등을 돌아보는 볼거리 등 아이들과 무리 없이 즐길 수 있는 요소들을 많이 포함한 가족 맞춤형 코스이다.</string>
    <string name="mt_ansan_place">위치 : 서울특별시 서대문구 봉원동</string>
    <string name="mt_ansan">옛 서울의 서쪽 관문인 독립문사거리 옆, 독립공원엔 일제강점기 아픈 역사의 흔적을 고스란히 재현해 놓은 서대문 형무소가 있고, 그 뒤로는 안산의 한적한 숲길과 산책로가 조성된 코스이다. 낮지만 웅장한 안산, 그 안산이 내어준 도시자연공원의 한적한 숲길과 독립공원을 한데 엮은 서대문 산책은 발로만 느끼기에는 보고 생각할 일이 너무도 많다.
안산은 해발 296m로 동봉과 서봉의 두 봉우리로 이루어져, 산의 모양이 마치 말의 안장 즉 길마와 같이 생겨 붙여진 이름으로, 인왕산에서 서쪽으로 비스듬히 뻗어 무악재를 이루고 있는 산이다. 정상에는 봉수대가 있는데 평안도에서 올라온 봉화가 안산에 연결되어 최종 남산으로 연결되었다. 정상 부근에는 큰 바위들이 많고 서울시 중구 일대를 관망하는 전망이 뛰어나다.</string>
    <string name="title_activity_mt_bukan">mt_bukan</string>
</resources>
