<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Picnicactivity">

    <ImageButton
        android:id="@+id/Family"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/banner_background2"
        android:contentDescription="@string/with_family"
        android:onClick="picnic_family"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/with_family"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/picnic_family" />

    <ImageButton
        android:id="@+id/Couple"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/banner_background2"
        android:contentDescription="@string/with_couple"
        android:onClick="picnic_couple"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/with_couple"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/picnic_couple" />

    <ImageButton
        android:id="@+id/Solo"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/banner_background2"
        android:contentDescription="@string/with_solo"
        android:onClick="picnic_solo"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/with_solo"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/picnic_solo" />

    <ImageButton
        android:id="@+id/Pet"
        android:layout_width="160dp"
        android:layout_height="120dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/banner_background2"
        android:contentDescription="@string/with_pet"
        android:onClick="picnic_pet"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/with_pet"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/picnic_pet" />

    <ImageButton
        android:id="@+id/search"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_weight="1"
        android:background="#00FFFFFF"
        android:contentDescription="@string/top_search"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/search" />

    <ImageButton
        android:id="@+id/sidemenu"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="#00FFFFFF"
        android:contentDescription="@string/top_sidemenu"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/side_menu" />

    <ImageView
        android:id="@+id/app_name"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:contentDescription="@string/top_appname"
        android:scaleType="fitCenter"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_top_banner" />

    <TextView
        android:id="@+id/with_family"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/with_family"
        android:fontFamily="@font/goyang"
        android:gravity="center_horizontal|top"
        android:scaleType="fitXY"
        android:text="@string/with_family"
        android:textColor="#23B085"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/with_family_desc"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/with_family_desc"
        android:layout_width="184dp"
        android:layout_height="80dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/with_family_desc"
        android:fontFamily="@font/font_goyang"
        android:gravity="center_horizontal"
        android:text="@string/with_family_desc"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Solo"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/with_couple"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/with_couple"
        android:fontFamily="@font/font_goyang"
        android:gravity="center_horizontal|top"
        android:text="@string/with_couple"
        android:textColor="#23B085"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/with_couple_desc"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/with_couple_desc"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:contentDescription="@string/with_couple_desc"
        android:fontFamily="@font/font_goyang"
        android:gravity="center_horizontal"
        android:text="@string/with_couple_desc"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/Pet"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/with_solo"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/with_solo"
        android:fontFamily="@font/font_goyang"
        android:gravity="center_horizontal|top"
        android:text="@string/with_solo"
        android:textColor="#23B085"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/with_solo_desc"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/with_solo_desc"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/with_solo_desc"
        android:fontFamily="@font/font_goyang"
        android:gravity="center_horizontal"
        android:text="@string/with_solo_desc"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/with_pet"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/with_pet"
        android:fontFamily="@font/font_goyang"
        android:gravity="center_horizontal|top"
        android:text="@string/wiith_pet"
        android:textColor="#23B085"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/with_pet_desc"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/with_pet_desc"
        android:layout_width="170dp"
        android:layout_height="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:contentDescription="@string/with_pet_desc"
        android:fontFamily="@font/font_goyang"
        android:gravity="center_horizontal"
        android:text="@string/with_pet_desc"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>